color contrast fix for required form elements

--- a/themes/cuivory/css/ivory-styles.css
+++ b/themes/cuivory/css/ivory-styles.css
@@ -3,6 +3,8 @@ body.layout-boxed { background-color: #fafafa; }
 body.layout-wide { background-color: #000; }
 body.layout-wide #backstretch { display: none; }
 
+.form-required { color: #AD0000 !important }
+
 .layout-boxed .page { width: 1160px; margin: 0 auto; -webkit-box-shadow: 0px 0px 80px rgba(0, 0, 0, 0.25); -moz-box-shadow: 0px 0px 80px rgba(0, 0, 0, 0.25); box-shadow: 0px 0px 80px rgba(0, 0, 0, 0.25); }
 
 .layout-responsive.layout-boxed .page { width: 100%; max-width: 920px; }
