--- a/themes/cumodern/css/modern-styles.css
+++ b/themes/cumodern/css/modern-styles.css
@@ -2,6 +2,8 @@ body { background-color: #000; }
 
 .layout-wide #backstretch { display: none; }
 
+.form-required { color: #AD0000 !important }
+
 .layout-boxed.layout-fixed .page { width: 1500px; margin: 0 auto; }
 
 .layout-boxed.layout-responsive .page { max-width: 1500px; margin: 0 auto; }
