--- a/themes/cushadow/css/shadow-styles.css
+++ b/themes/cushadow/css/shadow-styles.css
@@ -5,6 +5,8 @@ body { background: none; background-color: #000; background-color: #f2f2f2; back
 
 .layout-fixed .page { width: 1160px; margin: 0 auto; }
 
+.form-required { color: #AD0000 !important }
+
 .layout-responsive .page { width: auto; margin: 0 auto; max-width: 920px; }
 @media screen and (min-width: 1200px) { .layout-responsive .page { max-width: 1160px; } }
 @media screen and (min-width: 1500px) { .layout-responsive .page { max-width: 1500px; } }
