--- a/themes/cuspirit/css/spirit-styles.css
+++ b/themes/cuspirit/css/spirit-styles.css
@@ -2,6 +2,8 @@ body { background: #000; }
 
 .layout-boxed { background-color: #f7f7f7; }
 
+.form-required { color: #AD0000 !important }
+
 #page { background: #f5f5f5; background: #fff; }
 
 .layout-fixed.layout-boxed #page { width: 1200px; margin: 0 auto; }
